# mcp-beads-village

./: .gitignore  AGENTS-LITE.md  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  test_changes.py  test_cross_workspace.py
.beads/: issues.jsonl
.beads-village/: agents.json
beads_village/: agent_registry.py  bd_daemon_client.py  bv_manager.py  http_server.py  server.py
beads_village/dashboard/: __init__.py  __main__.py  app.py  watcher.py
docs/: SETUP.md  WORKFLOW.md
tests/: test_bv_manager.py
