[project]
name = "beads-village"
version = "1.2.0"
description = "MCP server for multi-agent workflow with Beads + Agent Mail"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mcp", "beads", "agent", "ai", "workflow", "issue-tracker"]
authors = [
    {name = "LNS2905"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "textual>=0.40.0",
]

[project.scripts]
beads-village = "beads_village.server:main"

[project.urls]
Homepage = "https://github.com/LNS2905/mcp-beads-village"
Repository = "https://github.com/LNS2905/mcp-beads-village"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beads_village"]
